name:                dynobud
version:             0.1.0.0
synopsis:            your dynamic optimization buddy
-- description:
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Dyno.LagrangePolynomials
                       Dyno.AlgorithmV
                       Dyno.TypeVecs
                       Dyno.Nats
--                       Dyno.MultipleShooting
                       Dyno.Dae
                       Dyno.Models.Aircraft
                       Dyno.Models.AeroCoeffs
                       Dyno.Models.Betty
                       Dyno.Ocp
                       Dyno.DirectCollocation
                       Dyno.DirectCollocation.Types
                       Dyno.DirectCollocation.Formulate
                       Dyno.DirectCollocation.Reify
                       Dyno.DirectCollocation.Dynamic
                       Dyno.Cov
                       Dyno.View.Function
                       Dyno.View.Symbolic
                       Dyno.View.View
                       Dyno.View.Viewable
                       Dyno.Vectorize
                       Dyno.Nlp
--                       Dyno.NlpMonad
--                       Dyno.OcpMonad
                       Dyno.Interface.LogsAndErrors
                       Dyno.Interface.Types
                       Dyno.NlpSolver
                       Dyno.Ipopt
--                       Dyno.Snopt
                       Dyno.Casadi.IOSchemes
                       Dyno.Casadi.MX
                       Dyno.Casadi.MXFunction
                       Dyno.Casadi.SX
                       Dyno.Casadi.SXFunction
                       Dyno.Casadi.SXElement
                       Dyno.Casadi.DMatrix
--                       Dyno.Sqp.Sqp
--                       Dyno.Sqp.LineSearch
                       Dyno.Server.Accessors
                       Dyno.Server.GraphWidget
                       Dyno.Server.PlotChart
                       Dyno.Server.PlotTypes
                       Dyno.Server.Server

  -- other-modules:
  build-depends:       base >=4.6 && <4.8,
                       vector >=0.10 && <0.11,
                       dvda >=0.4 && <0.5,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       jacobi-roots >=0.2 && <0.3,
                       hmatrix,
                       unordered-containers >=0.2 && <0.3,
                       casadi-bindings >= 1.8.0.0 && < 1.9,
                       transformers >=0.3 && <0.4,
                       primitive >=0.5 && <0.6,
                       ghc-prim >=0.3 && <0.4,
                       linear >= 1.3.1.1,
                       tagged >= 0.6,
                       reflection >= 1.3.2,
                       lens,
                       cereal,
                       glib,
                       time,
                       stm,
                       gtk,
                       Chart-gtk,
                       Chart,
                       data-default-class
--                       cplex
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
--  ghc-options:         -O2 -rtsopts
  ghc-prof-options:    -O2 -prof -fprof-auto -fprof-cafs -fprof-auto-calls

--executable ocpMonad
--  hs-source-dirs:      examples
--  main-is:             OcpM.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       vector >=0.10 && <0.11,
--                       base >=4.6 && <4.8,
--                       dvda,
--                       zeromq3-haskell,
--                       cereal,
--                       bytestring
--
--  ghc-options:         -threaded -O2
--
--executable rocket
--  hs-source-dirs:      examples
--  main-is:             Rocket.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       vector >=0.10 && <0.11,
--                       base >=4.6 && <4.8,
--                       dvda,
--                       zeromq3-haskell,
--                       cereal,
--                       bytestring
--
--  ghc-options:         -threaded -O2
--
--executable staticExample
--  hs-source-dirs:      examples
--  main-is:             StaticExample.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       vector >=0.10 && <0.11,
--                       base >=4.6 && <4.8
--  ghc-options:         -threaded -O2

executable basic
  hs-source-dirs:      examples
  main-is:             Basic.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.8
  ghc-options:         -threaded -O2

--executable daeColl
--  hs-source-dirs:      examples
--  main-is:             DaeColl.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       base >=4.6 && <4.8
--  ghc-options:         -threaded -O2
--
--executable glider
--  hs-source-dirs:      examples
--  main-is:             Glider.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       base >=4.6 && <4.8,
--                       containers,
--                       linear,
--                       bytestring,
--                       cereal,
--                       vector,
--                       zeromq3-haskell
--  ghc-options:         -threaded -O2
--
executable gliderPlot
  hs-source-dirs:      examples
  main-is:             GliderPlotter.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       base >=4.6 && <4.8,
                       containers,
                       vector,
                       cereal,
                       bytestring,
                       zeromq3-haskell
  ghc-options:         -O2

executable plotCovs
  hs-source-dirs:      examples/CovSpring
  main-is:             PlotCovs.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       base >=4.6 && <4.8,
                       not-gloss,
                       stm,
                       containers,
                       cereal,
                       linear,
                       bytestring,
                       zeromq3-haskell,
                       vector
  ghc-options:         -O2 -threaded

test-suite lp_tests
  type: exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       vector,
                       linear,
                       hmatrix-glpk,
                       QuickCheck >= 2,
                       HUnit,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2,
                       base >=4.6 && <4.8
  ghc-options:         -O2

--:set -isrc -iexamples -iexamples/CovSpring
