name:                hascm
version:             0.1.0.0
synopsis:            optimal control environment
-- description:
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Hascm.LagrangePolynomials,
                       Hascm.AlgorithmV,
                       Hascm.TypeVecs,
--                       Hascm.MultipleShooting,
                       Hascm.Dae,
                       Hascm.Sqp.Sqp,
                       Hascm.Sqp.LineSearch,
                       Hascm.Models.Aircraft,
                       Hascm.Models.AeroCoeffs,
                       Hascm.Models.Betty,
                       Hascm.Accessors,
                       Hascm.Ocp,
                       Hascm.DirectCollocation,
                       Hascm.TypeNats,
                       Hascm.Vectorize,
                       Hascm.Nlp,
                       Hascm.StaticNlp,
                       Hascm.StaticNlp.LogsAndErrors,
                       Hascm.StaticNlp.StaticNlpTypes,
                       Hascm.Ipopt
                       Hascm.Snopt
                       Hascm.Casadi.IOSchemes,
                       Hascm.Casadi.SXFunction
                       Hascm.Casadi.SX
                       Hascm.Casadi.SXMatrix
                       Hascm.Casadi.DMatrix
                       Hascm.Casadi.QP

  -- other-modules:
  build-depends:       base >=4.6 && <4.7,
                       vector >=0.10 && <0.11,
                       dvda >=0.4 && <0.5,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       jacobi-roots >=0.2 && <0.3,
                       hmatrix,
                       unordered-containers >=0.2 && <0.3,
                       casadi-bindings >=0.1 && <0.2,
                       tfp >=0.8 && <0.9,
                       transformers >=0.3 && <0.4,
                       type-level >=0.2 && <0.3,
                       primitive >=0.5 && <0.6,
                       ghc-prim >=0.3 && <0.4,
                       linear >= 1.3.1,
                       cplex,
                       hsnopt
  hs-source-dirs:      src
  default-language:    Haskell2010

executable staticExample
  hs-source-dirs:      examples
  main-is:             StaticExample.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.7
  ghc-options:         -threaded -O2

executable sqp
  hs-source-dirs:      examples
  main-is:             Examples.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.7
  ghc-options:         -threaded -O2

executable daeColl
  hs-source-dirs:      examples
  main-is:             DaeColl.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7,
                       Plot-ho-matic >= 0.3.0.0
  ghc-options:         -threaded -O2

executable glider
  hs-source-dirs:      examples
  main-is:             Glider.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7,
                       containers,
                       linear,
                       bytestring,
                       cereal,
                       vector,
                       zeromq-haskell
  ghc-options:         -threaded -O2

executable gliderPlot
  hs-source-dirs:      examples
  main-is:             GliderPlotter.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7,
                       zeromq-haskell,
                       containers,
                       vector,
                       cereal,
                       Plot-ho-matic >= 0.3.0.0
  ghc-options:         -threaded -O2
