name:                hascm
version:             0.1.0.0
synopsis:            optimal control environment
-- description:
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Hascm.LagrangePolynomials
                       Hascm.AlgorithmV
                       Hascm.TypeVecs
                       Hascm.Nats
                       Hascm.MultipleShooting
                       Hascm.Dae
                       Hascm.Models.Aircraft
                       Hascm.Models.AeroCoeffs
                       Hascm.Models.Betty
                       Hascm.Ocp
                       Hascm.DirectCollocation
                       Hascm.DirectCollocation.Types
                       Hascm.DirectCollocation.Formulate
                       Hascm.DirectCollocation.Reify
                       Hascm.DirectCollocation.Dynamic
                       Hascm.Vectorize
                       Hascm.Nlp
                       Hascm.NlpMonad
                       Hascm.OcpMonad
                       Hascm.Interface.LogsAndErrors
                       Hascm.Interface.Types
                       Hascm.Ipopt
                       Hascm.Casadi.IOSchemes
                       Hascm.Casadi.SXFunction
                       Hascm.Casadi.SX
                       Hascm.Casadi.SXMatrix
                       Hascm.Casadi.DMatrix
--                       Hascm.Sqp.Sqp
--                       Hascm.Sqp.LineSearch
--                       Hascm.Snopt
                       Hascm.Server.Accessors
                       Hascm.Server.GraphWidget
                       Hascm.Server.PlotChart
                       Hascm.Server.PlotTypes
                       Hascm.Server.Server

  -- other-modules:
  build-depends:       base >=4.6 && <4.7,
                       vector >=0.10 && <0.11,
                       dvda >=0.4 && <0.5,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       jacobi-roots >=0.2 && <0.3,
                       hmatrix,
                       unordered-containers >=0.2 && <0.3,
                       casadi-bindings >=0.1 && <0.2,
                       transformers >=0.3 && <0.4,
                       primitive >=0.5 && <0.6,
                       ghc-prim >=0.3 && <0.4,
                       linear >= 1.3.1.1,
                       tagged >= 0.6,
                       reflection >= 1.3.2,
                       lens,
                       glib,
                       time,
                       gtk,
                       Chart-gtk,
                       Chart,
                       stm,
                       data-default-class
--                       cplex,
--                       snopt
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
--  ghc-options:         -O2 -rtsopts
  ghc-prof-options:    -O2 -prof -fprof-auto -fprof-cafs -fprof-auto-calls

executable ocpMonad
  hs-source-dirs:      examples
  main-is:             OcpM.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.7,
                       dvda
  ghc-options:         -threaded -O2

executable staticExample
  hs-source-dirs:      examples
  main-is:             StaticExample.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.7
  ghc-options:         -threaded -O2

executable basic
  hs-source-dirs:      examples
  main-is:             Basic.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       vector >=0.10 && <0.11,
                       base >=4.6 && <4.7
  ghc-options:         -threaded -O2

executable daeColl
  hs-source-dirs:      examples
  main-is:             DaeColl.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7
  ghc-options:         -threaded -O2

executable glider
  hs-source-dirs:      examples
  main-is:             Glider.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7,
                       containers,
                       linear,
                       bytestring,
                       cereal,
                       vector,
                       zeromq3-haskell
  ghc-options:         -threaded -O2

executable gliderPlot
  hs-source-dirs:      examples
  main-is:             GliderPlotter.hs
  default-language:    Haskell2010
  build-depends:       hascm,
                       base >=4.6 && <4.7,
                       containers,
                       vector,
                       cereal,
                       bytestring,
                       zeromq3-haskell
  ghc-options:         -threaded -O2
